kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polyshop-order-rework
spec:
  selector:
    matchLabels:
      app: polyshop-order-rework
  template:
    metadata:
      labels:
        app: polyshop-order-rework
    spec:
      containers:
        - name: order
          image: gridexx/polyshop-order-rework
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polyshop-products-rework
spec:
  selector:
    matchLabels:
      app: polyshop-products-rework
  template:
    metadata:
      labels:
        app: polyshop-products-rework
    spec:
      containers:
        - name: order
          image: gridexx/polyshop-products-rework
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polyshop-product-mongodb
spec:
  selector:
    matchLabels:
      app: polyshop-product-mongodb
  template:
    metadata:
      labels:
        app: polyshop-product-mongodb
    spec:
      containers:
        - name: mongodb
          image: bitnami/postgresql:14.1.0-debian-10-r31
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polyshop-order-postgres
spec:
  selector:
    matchLabels:
      app: polyshop-order-postgres
  template:
    metadata:
      labels:
        app: polyshop-order-postgres
    spec:
      containers:
        - name: postgres
          image: bitnami/postgresql:14.1.0-debian-10-r31
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polyshop-frontend-rework
spec:
  selector:
    matchLabels:
      app: polyshop-frontend-rework
  template:
    metadata:
      labels:
        app: polyshop-frontend-rework
    spec:
      containers:
        - name: order
          image: gridexx/polyshop-frontend-rework
          imagePullPolicy: Always
