kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polyshop-product-mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: polyshop-product-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: polyshop-order-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: polyshop-order-postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: polyshop-frontend-rework
spec:
  ports:
    - port: 3000
      targetPort: 80
  selector:
    app: polyshop-frontend-rework
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: polyshop-order-rework
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: polyshop-order-rework
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: polyshop-products-rework
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: polyshop-products-rework
  type: LoadBalancer
